infra/k8s/apps/overlays/azure/store-ui/store-ui-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: store-ui-gateway
  namespace: aks-istio-ingress   
spec:
  selector:                            
    istio: aks-istio-ingressgateway-external
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
